force-app/main/default/objects/BMCServiceDesk__SYSQVFormatAction__c/BMCServiceDesk__SYSQVFormatAction__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the formatting actions of QuickViews.</description>
    <label>Quickview Format Action</label>
    <nameField>
        <displayFormat>FormatAction-{000}</displayFormat>
        <label>SysQVFormatAction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVFormatActions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>