force-app/main/default/objects/BMCServiceDesk__SYSQVFormatAction__c/fields/BMCServiceDesk__blink__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__blink__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blink</label>
    <type>Checkbox</type>
</CustomField>