force-app/main/default/objects/BMCServiceDesk__SYSQVFormatAction__c/fields/BMCServiceDesk__Bold__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Bold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bold</label>
    <type>Checkbox</type>
</CustomField>