force-app/main/default/objects/BMCServiceDesk__SYSQVFormatAction__c/fields/BMCServiceDesk__Italic__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Italic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Italic</label>
    <type>Checkbox</type>
</CustomField>