force-app/main/default/objects/BMCServiceDesk__SYSQVFormatAction__c/fields/BMCServiceDesk__TextColor__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TextColor__c</fullName>
    <label>TextColor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>